--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
           <a href="https://github.com/julen" class="btn"><i class="icon-github"></i> GitHub</a>
           <a href="https://twitter.com/julen" class="btn"><i class="icon-twitter"></i> Twitter</a>
-          <a href="assets/dl/cv.pdf" class="btn btn-inverse pull-right"><i class="icon-share-alt"></i> CV</a>
+          <a href="assets/dl/CV.pdf" class="btn btn-inverse pull-right"><i class="icon-share-alt"></i> CV</a>
         </p>
       </div>
     </div>
