--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="hero-unit offset2 span6">
         <h1>Julen Ruiz Aizpuru</h1>
-        <p>Python web developer.</p>
+        <p>Full-stack web development &amp; i18n/l10n.</p>
         <p>
           <a href="https://github.com/julen" class="btn"><i class="icon-github"></i> GitHub</a>
           <a href="https://twitter.com/julen" class="btn"><i class="icon-twitter"></i> Twitter</a>
