--- a/talks/ieb2013/index.html
+++ b/talks/ieb2013/index.html
@@ -59,7 +59,6 @@
       <li>2003an AOL/Netscapekiko independentzia lortu zuen proiektuak.</li>
       <li>Mozilla Manifestua da Mozilla Fundazioaren oinarria. Bertan
         definitutako printzipio eta helburuei jarraitzen die.</li>
-      <li>Suite-ari baino aplikazio indibidualen garapenari lehentasuna.</li>
     </ul></footer>
 	</div></section>
 
@@ -82,6 +81,16 @@
       <li>Argazkia: CC by <a
           href="https://secure.flickr.com/photos/johanl/5547851770/">Johan
           Larsson</a></li>
+    </ul></footer>
+	</div></section>
+
+	<section class="slide cover nocover"><div>
+    <img src="pictures/ios_android.png" class="place m" />
+		<footer><ul>
+      <li>Nagusitasuna: iOS eta Android</li>
+      <li>Argazkia: CC by <a
+          href="https://secure.flickr.com/photos/86979666@N00/7852942192/">Tsahi
+          Levent-Levi</a></li>
     </ul></footer>
 	</div></section>
 
@@ -163,11 +172,21 @@
           href="http://sencha.com">Sencha</a> eta antzerako
         <em>framework</em>ak.</li>
       <li>Garapen-kostuak kontuan izan behar dira.</li>
-      <li>Marketina vs. zentzua: benetan mugikorretarako aplikazio bat
-        behar dut?</li>
       <li>Argazkia: CC by-sa <a
           href="https://secure.flickr.com/photos/juniorvelo/4490511204/">Steve
           Ryan</a></li>
+    </ul></footer>
+	</div></section>
+
+	<section class="slide cover w"><div>
+		<h2>Aplikazioa?</h2>
+    <img src="pictures/thought.jpg" />
+		<footer><ul>
+      <li>Marketina vs. zentzua: benetan mugikorretarako aplikazio bat
+        behar dut?</li>
+      <li>Argazkia: CC by-nc-nd <a
+          href="https://secure.flickr.com/photos/rekapalli/2302263636/">Rahul
+          Rekapalli</a></li>
     </ul></footer>
 	</div></section>
 
@@ -186,36 +205,8 @@
     </ul></footer>
   </div></section>
 
-	<section class="slide cover w"><div>
-    <h2><a href="https://wiki.mozilla.org/WebAPI">WebAPIak</a></h2>
-    <img src="pictures/webapi.png" />
-		<footer><ul>
-      <li>Webak egokitzapenak behar ditu lehen mailako hiritar izan eta
-        plataforma gisa ulertu nahi bada.</li>
-      <li>Telefonoetan erabilgarri dauden eginbideak manipulatzeko
-        ahalmena ematen dute WebAPIek.</li>
-      <li>APIak definitu eta inplementatzearekin batera estandar izateko
-        proposatzen ari dira, beste nabigatzaileek ere inplementa
-        ditzaten. Azken batean hori da helburua.</li>
-      <li>Argazkia: <a
-          href="https://arewemobileyet.com">arewemobileyet.com</a></li>
-    </ul></footer>
-	</div></section>
-
-	<section class="slide cover h"><div>
-    <img src="pictures/architecture.jpg" />
-		<footer><ul>
-      <li>Hiru geruza nabarmen ditu Firefox OSek:</li><ul>
-        <li>Gonk: Linux banaketa arin bat. Androideko piezak ditu.
-          Androiderako telefonoen egileak badakite Firefox OSerako
-          telefonoak egiten.</li>
-        <li>Gecko: Errendatze-motorra.</li>
-        <li>Gaia: Erabiltzaile-interfazea.</li></ul>
-    </ul></footer>
-	</div></section>
-
 	<section class="slide"><div>
-		<h2>Ekosistema</h2>
+		<h2>Mozilla</h2>
     <table class="box">
       <tbody>
         <tr>
@@ -242,6 +233,34 @@
 		<footer><ul>
       <li>Hardwarea atzitzeko APIak ez ezik, ekosistema libre eta banatu
         oso bat inplementatu nahi da.</li>
+    </ul></footer>
+	</div></section>
+
+	<section class="slide cover h"><div>
+    <img src="pictures/architecture.jpg" />
+		<footer><ul>
+      <li>Hiru geruza nabarmen ditu Firefox OSek:</li><ul>
+        <li>Gonk: Linux banaketa arin bat. Androideko piezak ditu.
+          Androiderako telefonoen egileak badakite Firefox OSerako
+          telefonoak egiten.</li>
+        <li>Gecko: Errendatze-motorra.</li>
+        <li>Gaia: Erabiltzaile-interfazea.</li></ul>
+    </ul></footer>
+	</div></section>
+
+	<section class="slide cover w"><div>
+    <h2><a href="https://wiki.mozilla.org/WebAPI">WebAPIak</a></h2>
+    <img src="pictures/webapi.png" />
+		<footer><ul>
+      <li>Webak egokitzapenak behar ditu lehen mailako hiritar izan eta
+        plataforma gisa ulertu nahi bada.</li>
+      <li>Telefonoetan erabilgarri dauden eginbideak manipulatzeko
+        ahalmena ematen dute WebAPIek.</li>
+      <li>APIak definitu eta inplementatzearekin batera estandar izateko
+        proposatzen ari dira, beste nabigatzaileek ere inplementa
+        ditzaten. Azken batean hori da helburua.</li>
+      <li>Argazkia: <a
+          href="https://arewemobileyet.com">arewemobileyet.com</a></li>
     </ul></footer>
 	</div></section>
 
@@ -302,7 +321,7 @@
 	</div></section>
 
 	<section class="slide cover shout"><div>
-    <h2>Galderak, mesedez.</h2>
+    <h2>Galderak?</h2>
 	</div></section>
 
 	<!--
