--- a/talks/ieb2013/index.html
+++ b/talks/ieb2013/index.html
@@ -231,8 +231,8 @@
       </tbody>
     </table>
     <footer><ul>
-      <li>Hardwarea atzitzeko APIak ez ezik, ekosistema libre eta banatu
-        oso bat inplementatu nahi da.</li>
+      <li>Mozillaren planteatzen duen ekosistemak osagai libreak ditu,
+        estandar irekietan oinarrituta.</li>
     </ul></footer>
   </div></section>
 
