Fixed link text

--- a/talks/kabia2013/index.html
+++ b/talks/kabia2013/index.html
@@ -90,9 +90,9 @@
     <footer><ul>
       <li>Produktu guztietan arreta berezia jartzen da erabiltzailearen
         pribatutasunean.</li>
-      <li>Argazkia: CC by-sa g4ll4is <a
+      <li>Argazkia: CC by-sa <a
           href="http://www.flickr.com/photos/g4ll4is/8521624548/">
-          Mozilla</a></li>
+          g4ll4is</a></li>
     </ul></footer>
   </div></section>
 
