Added further explanations

--- a/talks/kabia2013/index.html
+++ b/talks/kabia2013/index.html
@@ -102,6 +102,11 @@
     <footer><ul>
       <li>Pribatutasuna zaintzeko zerbitzu eta ekimenak martxan: Persona,
         DoNotTrack, Lightbeam.</li>
+      <li>Persona zerbitzuaren bidez webguneetan saioa hasteko modu seguru
+        eta banatua eskaintzen da.</li>
+      <li>Ligthbeam gehigarria instalatuta, eta gure nabigazio-jardueran
+        oinarrituta, gu zelatatzen egon litezkeen guneak/hirugarrenak
+        identifika ditzakegu.</li>
     </ul></footer>
   </div></section>
 
@@ -175,6 +180,10 @@
 
   <section class="slide cover shout"><div>
     <h2><a href="https://www.mozilla.org/eu/">mozilla.org/eu</a></h2>
+    <footer><ul>
+      <li>Proiektu hauei buruz (eta aipatu gabeko besteei buruz) gehiago
+        jakiteko azken informazioa Mozillaren webgunean topa daiteke.</li>
+    </ul></footer>
   </div></section>
 
   <section class="slide cover shout"><div>
